fix: text alignment on dropzone

--- a/src/components/file-picker/file-picker.scss
+++ b/src/components/file-picker/file-picker.scss
@@ -14,6 +14,7 @@
   justify-content: space-around;
   margin: 8px 0;
   position: relative;
+  text-align: center;
   width: 100%;
 
   &-uploadInfo {
